--- a/docs/upload_nn.yml
+++ b/docs/upload_nn.yml
@@ -1,51 +1,30 @@
 swagger: '2.0'
 info:
-  description: "Upload Neural Network Model"
+  description: "Upload the NN model file"
   version: "1.0.0"
-  title: "Upload NN Model API"
+  title: "Upload NN Model"
 paths:
   /upload_nn:
     post:
       tags:
-        - "Model"
-      summary: "Upload NN Model"
-      description: "Endpoint to upload a Neural Network model file"
+        - "model"
+      summary: "Upload NN model"
+      description: "Upload the NN model file"
       consumes:
         - "multipart/form-data"
       produces:
         - "application/json"
       parameters:
-        - name: "text"
-          in: "formData"
-          description: "Text data associated with the model"
-          required: true
-          type: "string"
         - name: "file"
           in: "formData"
-          description: "NN model file to upload"
+          description: "The NN model file to upload"
           required: true
           type: "file"
       responses:
         200:
-          description: "Successful operation"
+          description: "successful operation"
           schema:
             type: "object"
             properties:
               message:
-                type: "string"
-              text:
-                type: "string"
-        400:
-          description: "Error uploading model"
-          schema:
-            type: "object"
-            properties:
-              error:
-                type: "string"
-        500:
-          description: "Server error"
-          schema:
-            type: "object"
-            properties:
-              error:
                 type: "string"
